--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/flutter
-spring.datasource.username=mdd
-spring.datasource.password=313521996
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
