--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=313521996
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
+
+spring.mail.username=313521996@qq.com
+spring.mail.password=zfqnaxmkasbqbhcf
+spring.mail.default-encoding=UTF-8
+spring.mail.protocol=smtp
+spring.mail.host=smtp.qq.com
