--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mail.password=zfqnaxmkasbqbhcf
 spring.mail.default-encoding=UTF-8
 spring.mail.protocol=smtp
 spring.mail.host=smtp.qq.com
+
+server.port=8888
